--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="csss/styles.css">
     <title></title>
   </head>
-  <body>
+  <body >
         <div class="overlay">
                 <h1 class="text-center akan">Akan Names</h1>
           
@@ -18,7 +18,11 @@
         <div class="row">
           <div class="col-md-3">
             <div class="jumbotron p-1 left">
-                
+              <img src="csss/akans.jpeg" alt="picture" class="rounded-circle" height="100">
+              <p class="p-text">The Akan people of Ghana name their children after the day of the week
+                they were born.</p>
+                <p class="p-text">These "day names" have further meanings concerning the soul and character of the person.</p>
+                <p class="q-text text-center">What's your akan name?</p>
             </div>
           </div>
           <div class="col-md-6 center">
