--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
                     <br>
                     <a href="#result"><button type="button" name="button" class="btn btn-primary mb-2" onclick="checkDayOfWeek();">Calculate Birthday</button></a>
                     <h1 id="result"></h1>
+                    </div>
+                
             </div>
           </div>
         </div>
