--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title></title>
   </head>
   <body >
-        <div class="overlay">
+        <div class="overlay"></div>
                 <h1 class="text-center akan">Akan Names</h1>
           
               </div>
